--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.IMSS"
         tools:targetApi="31">
         <activity
+            android:name=".CcAgregaReceta"
+            android:exported="false" />
+        <activity
+            android:name=".CcAgregaHistorial"
+            android:exported="false" />
+        <activity
             android:name=".CcAgregaVacuna"
             android:exported="false" />
         <activity
